--- a/setup.cfg
+++ b/setup.cfg
@@ -107,6 +107,9 @@ DJANGO_SETTINGS_MODULE = tests.acceptance.django_settings
 [mypy]
 no_implicit_optional = True
 
+[mypy-django.*]
+ignore_missing_imports = True
+
 [coverage:run]
 omit =
     procrastinate/contrib/django/migrations/*
